object-fit: cover; added to profile images to avoid stretching

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -379,6 +379,7 @@ textarea {
 .chef-profile {
     height: 100%;
     width: 100%;
+    object-fit: cover;
 }
 #profile-content {
     margin-top: 1rem;
